--- a/PetWorld/src/main/resources/templates/appointments-management.html
+++ b/PetWorld/src/main/resources/templates/appointments-management.html
@@ -148,14 +148,6 @@
                     </svg>
                     <input type="text" placeholder="Search bills...">
                 </div>
-                <button class="new-bill-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <line x1="12" y1="5" x2="12" y2="19"/>
-                        <line x1="5" y1="12" x2="19" y2="12"/>
-                    </svg>
-                    New Bill
-                </button>
             </div>
         </div>
 
@@ -199,7 +191,29 @@
         </div>
     </main>
 </div>
+<!-- Add notification container -->
+<div class="notification-container">
+    <div class="notification-bell" id="notificationBell">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+        </svg>
+        <span class="notification-count" id="notificationCount"></span>
+    </div>
+    <div class="notifications-dropdown" id="notificationsDropdown">
+        <div class="notification-header">
+            <span>Notifications</span>
+            <button class="mark-all-read" id="markAllRead">Mark all as read</button>
+        </div>
+        <div id="notificationsList">
+            <!-- Notifications will be inserted here -->
+        </div>
+    </div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="/js/appointments-management.js"></script>
 <script src="/js/sidebar.js"></script>
+<script src="/js/notification.js"></script>
 </body>
 </html>
