--- a/PetWorld/src/main/resources/templates/find-friend.html
+++ b/PetWorld/src/main/resources/templates/find-friend.html
@@ -149,8 +149,29 @@
     </div>
 </main>
 </div>
-
+<!-- Add notification container -->
+<div class="notification-container">
+    <div class="notification-bell" id="notificationBell">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+        </svg>
+        <span class="notification-count" id="notificationCount"></span>
+    </div>
+    <div class="notifications-dropdown" id="notificationsDropdown">
+        <div class="notification-header">
+            <span>Notifications</span>
+            <button class="mark-all-read" id="markAllRead">Mark all as read</button>
+        </div>
+        <div id="notificationsList">
+            <!-- Notifications will be inserted here -->
+        </div>
+    </div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="/js/find-friend.js"></script>
 <script src="/js/sidebar.js"></script>
+<script src="/js/notification.js"></script>
 </body>
 </html>
