--- a/PetWorld/src/main/resources/templates/chat.html
+++ b/PetWorld/src/main/resources/templates/chat.html
@@ -11,6 +11,9 @@
     <!-- Friends list sidebar -->
     <div class="friends-list">
         <div class="friends-header">
+            <button id="back-button" class="back-button">
+                <span>←</span>
+            </button>
             <h2>Friends</h2>
         </div>
         <div class="friends-search">
