--- a/PetWorld/src/main/resources/templates/pet-center-profile.html
+++ b/PetWorld/src/main/resources/templates/pet-center-profile.html
@@ -145,10 +145,14 @@
                     <img id="center-avatar" src="/images/default-center.jpg" alt="Center Profile" class="profile-avatar">
                 </div>
                 <div class="profile-actions">
-                    <button class="edit-button">
-                        <span class="material-symbols-outlined">edit</span>
-                        Edit Profile
-                    </button>
+                    <a href="/pet-center/edit-profile">
+                        <button classhref="/pet-center/edit-profile">
+                            <button class="edit-button">
+                                <span class="material-symbols-outlined">edit</span>
+                                Edit Profile
+                            </button>
+                        </button>
+                    </a>
                 </div>
             </div>
 
