--- a/PetWorld/src/main/resources/templates/user-profile.html
+++ b/PetWorld/src/main/resources/templates/user-profile.html
@@ -149,6 +149,7 @@
               <span class="material-symbols-outlined">edit</span>
               Edit Profile
             </button>
+          </button>
         </a>
       </div>
       <div class="profile-info">
