--- a/PetWorld/src/main/resources/templates/edit-profile-pet-care-services.html
+++ b/PetWorld/src/main/resources/templates/edit-profile-pet-care-services.html
@@ -12,36 +12,36 @@
     <div class="profile-header">
         <h1>Edit Profile</h1>
     </div>
-    <form id="edit-profile-form" th:action="@{/pet-care-services/edit-profile}" th:object="${userUpdate}" method="GET" enctype="multipart/form-data">
+    <form id="edit-profile-form" method="POST" enctype="multipart/form-data">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" th:field="*{name}" class="form-input" value="Loading..." required />
+            <input type="text" id="name" class="form-input" required />
             <div class="error-message">Please enter a valid name</div>
         </div>
         <div class="form-group">
             <label for="email">Email Address</label>
-            <input type="email" id="email" th:field="*{email}" class="form-input" value="Loading..." required />
+            <input type="email" id="email" class="form-input" required />
             <div class="error-message">Please enter a valid email address</div>
         </div>
         <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="text" id="phone" th:field="*{phone}" class="form-input" value="Loading..." required />
+            <input type="text" id="phone" class="form-input" required />
             <div class="error-message">Please enter a valid phone</div>
         </div>
         <div class="form-group">
             <label for="address">Address</label>
-            <input type="text" id="address" th:field="*{address}" class="form-input" value="Loading..." required />
+            <input type="text" id="address" class="form-input" required />
             <div class="error-message">Please enter a valid address</div>
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <input type="text" id="description" th:field="*{description}" class="form-input" value="Loading..." required />
+            <input type="text" id="description" class="form-input" required />
         </div>
         <div class="form-group">
             <label for="password">New password</label>
-            <input type="password" id="password" th:field="*{password}" class="form-input" value="Loading..." required />
+            <input type="password" id="password" class="form-input" required />
         </div>
-        <input type="hidden" id="avatarUrl" th:field="*{avatar}" name="avatarUrl">
+        <input type="hidden" id="avatarUrl" name="avatarUrl">
 
         <div class="form-group">
             <label for="avatar">Profile Picture</label>
