--- a/PetWorld/src/main/resources/templates/edit-profile-pet-center.html
+++ b/PetWorld/src/main/resources/templates/edit-profile-pet-center.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet World | Edit Profile</title>
-    <link rel="stylesheet" href="/css/edit-profile-pet-owner.css">
+    <link rel="stylesheet" href="/css/edit-profile-pet-care-services.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 <body>
@@ -12,22 +12,26 @@
     <div class="profile-header">
         <h1>Edit Profile</h1>
     </div>
-    <form id="edit-profile-form" enctype="multipart/form-data">
+    <form id="edit-profile-form" method="POST" enctype="multipart/form-data">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" id="name" class="form-input" required />
+            <div class="error-message">Please enter a valid name</div>
         </div>
         <div class="form-group">
             <label for="email">Email Address</label>
             <input type="email" id="email" class="form-input" required />
+            <div class="error-message">Please enter a valid email address</div>
         </div>
         <div class="form-group">
             <label for="phone">Phone</label>
             <input type="text" id="phone" class="form-input" required />
+            <div class="error-message">Please enter a valid phone</div>
         </div>
         <div class="form-group">
             <label for="address">Address</label>
             <input type="text" id="address" class="form-input" required />
+            <div class="error-message">Please enter a valid address</div>
         </div>
         <div class="form-group">
             <label for="description">Description</label>
@@ -38,6 +42,7 @@
             <input type="password" id="password" class="form-input" required />
         </div>
         <input type="hidden" id="avatarUrl" name="avatarUrl">
+
         <div class="form-group">
             <label for="avatar">Profile Picture</label>
             <div class="preview-container">
@@ -55,6 +60,6 @@
     </form>
 </div>
 
-<script src="/js/edit-profile-pet-owner.js"></script>
+<script type="module" src="/js/edit-profile-pet-center.js"></script>
 </body>
 </html>
