update: add images

--- a/PetWorld/src/main/resources/templates/index.html
+++ b/PetWorld/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="hero-image-wrapper">
-        <img src="images/coffee-hero-section.png" alt="Coffee" class="hero-image" />
+        <img src="/images/home.png" alt="Coffee" class="hero-image" />
       </div>
     </div>
   </section>
@@ -51,7 +51,7 @@
   <section class="about-section" id="about">
     <div class="section-content">
       <div class="about-image-wrapper">
-        <img src="images/about-image.jpg" alt="About" class="about-image" />
+        <img src="/images/logo.png" alt="About" class="about-image" />
       </div>
       <div class="about-details">
         <h2 class="section-title">About Us</h2>
@@ -59,9 +59,8 @@
         <p class="description">Welcome to PetWorld – your one-stop platform to connect with fellow pet lovers, find your perfect furry companion for adoption, discover pet care services, and manage your pets with ease. Join us in creating a happy, healthy life for your beloved pets!</p>
         <br>
         <div class="social-link-list">
-          <a href="#" class="social-link"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" class="social-link"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100032444196721" class="social-link"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.instagram.com/minhengdey" class="social-link"><i class="fa-brands fa-instagram"></i></a>
         </div>
       </div>
     </div>
@@ -71,9 +70,8 @@
     <div class="section-content">
       <p class="copyright-text">© 2025 Pet World</p>
       <div class="social-link-list">
-        <a href="#" class="social-link"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#" class="social-link"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100032444196721" class="social-link"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/minhengdey" class="social-link"><i class="fa-brands fa-instagram"></i></a>
       </div>
       <p class="policy-text">
         <a href="#" class="policy-link">Privacy policy</a>
