--- a/PetWorld/src/main/resources/templates/log-in.html
+++ b/PetWorld/src/main/resources/templates/log-in.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet World | Login</title>
     <link rel="stylesheet" href="/css/log-in.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
 <div class="login-container">
@@ -17,28 +17,41 @@
 
     <form id="login-form">
         <div class="form-group">
-            <label for="email">Email Address</label>
+            <label for="email">Email Address <span class="required">*</span></label>
             <input type="email" id="email" class="form-input" placeholder="Enter your email" required />
         </div>
 
         <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" class="form-input" placeholder="Enter your password" required />
+            <label for="password">Password <span class="required">*</span></label>
+            <div class="password-container">
+                <input type="password" id="password" class="form-input" placeholder="Enter your password" required />
+                <i class="fa-solid fa-eye-slash toggle-password" data-target="password"></i>
+            </div>
         </div>
 
         <div class="form-group">
-            <label for="role">I am a</label>
+            <label for="role">I am a <span class="required">*</span></label>
             <select id="role" class="form-input" required>
+                <option value="" disabled selected>Select your role</option>
                 <option value="PET_OWNER">Pet Owner</option>
                 <option value="PET_CENTER">Pet Adoption Center</option>
                 <option value="PET_CARE_SERVICES">Pet Care Service Provider</option>
             </select>
         </div>
 
+        <div class="remember-me">
+            <input type="checkbox" id="remember" />
+            <label for="remember">Remember me</label>
+        </div>
+
+        <div class="forgot-password">
+            <a href="/auth/forgot-password">Forgot Password?</a>
+        </div>
+
         <button type="submit" class="submit-button">Login</button>
 
         <div class="register-link">
-            Don't have an account? <a href="/auth/show-register">Sign up</a>
+            Don't have an account? <a href="/auth/register">Sign up</a>
         </div>
     </form>
 </div>
